[package]
name = "btc_transaction"
version = "0.1.0"
authors = ["fpChan <fpchen@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version= "0.25.0"}
hex = "0.4.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.40"
reqwest = { version = "0.10", features = ["blocking", "json"] }
